cmake_minimum_required(VERSION 3.20)
project(xCamp300)

set(CMAKE_CXX_STANDARD 23)

add_executable(xCamp300 Hw1/pivot.cpp Hw1/BreedCounting.cpp Hw1/SubsequencesSummingToSevens.cpp Hw1/SubarraySums1.cpp Hw2/HoofPaperScissors.cpp Hw2/SubarraySumsII.cpp Hw2/RestaurantCustomers.cpp Hw4/SumOfTwoValues.cpp Hw4/SumOfThreeValues.cpp Hw3/RectangularPasture.cpp Hw3/ForestQueries.cpp Hw3/PaintingTheBarn.cpp Hw4/DiamondCollector.cpp)
