cmake_minimum_required(VERSION 3.20)
project(xCamp300)

set(CMAKE_CXX_STANDARD 23)

add_executable(xCamp300 Hw1/pivot.cpp Hw1/BreedCounting.cpp Hw1/SubsequencesSummingToSevens.cpp Hw1/SubarraySums1.cpp Hw2/HoofPaperScissors.cpp Hw2/SubarraySumsII.cpp Hw2/RestaurantCustomers.cpp Hw4/SumOfTwoValues.cpp Hw4/SumOfThreeValues.cpp Hw3/RectangularPasture.cpp Hw5/Maxsubararysum2.cpp Hw7/RopeCutting.cpp Hw7/CuttingTrees.cpp Hw8/CowDanceShow.cpp Hw8/AngryCows.cpp Hw8/DivideArrayIntoSegments.cpp Hw9/Apartments.cpp Hw9/MiceAndHoles.cpp)
